update: fix css body text-align not center

--- a/app/javascript/src/stylesheets/application.scss
+++ b/app/javascript/src/stylesheets/application.scss
@@ -14,7 +14,7 @@ html {
 body {
   display: flex;
   flex-flow: column;
-  text-align: center;
+  // text-align: center;
   margin: 0;
   min-height: 100vh;
   // background-color: $c-back-body;
